<resources>
    <string name="app_name">Sheep Tracker</string>
    <string name="sheep">sheep</string>
    <string name="lamb">lamb</string>
    <string name="black">black</string>
    <string name="grey">grey</string>
    <string name="white">white</string>
    <string name="red_tie">red tie</string>
    <string name="blue_tie">blue tie</string>
    <string name="green_tie">green tie</string>
    <string name="yellow_tie">yellow tie</string>
    <string name="map_areas">Map Areas</string>
    <string name="my_trips">Conducted Trips</string>
    <string name="map_area">Map area</string>
    <string name="delete">Delete</string>
    <string name="new_trip">New Trip</string>
    <string name="add">Add</string>
    <string name="trip_name">Trip name</string>
    <string name="select_map_area">Select Map Area:</string>
    <string name="trip">Trip</string>
    <string name="map">Map</string>
    <string name="observations">Observations</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="no_observations">No Observations</string>
    <string name="select_observation_type">Select Observation Type</string>
    <string name="count">Count</string>
    <string name="dead">Dead</string>
    <string name="injured">Injured</string>
    <string name="register_observation">Register Herd Count</string>
    <string name="notes">Notes</string>
    <string name="observation_notes">Observation notes</string>
    <string name="expected_lamb_count">Expected lambs:</string>
    <string name="herd_observation">Herd Observation</string>
    <string name="save">Save</string>
    <string name="swiper">Swiper</string>
    <string name="image">Image</string>
    <string name="register_animal_info">Register Animal Info</string>
    <string name="no_images">No Images</string>
    <string name="images">Images</string>
    <string name="animal_id">Animal Id</string>
    <string name="animal_identification_number">Animal Identification Number</string>
    <string name="select_image">Select an image</string>
    <string name="dead_animal">DEAD ANIMAL</string>
    <string name="injured_animal">INJURED ANIMAL</string>
    <string name="add_image">Add image</string>
    <string name="take_image">Take image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="animal_registration">Animal Registration</string>
    <string name="map_area_name">Map area name</string>
    <string name="download_mapArea">Download Map Area</string>
    <string name="enter_map_area_name">Enter the name of the selected map area</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="delete_map_area">Delete Map Area</string>
    <string name="delete_map_area_query">Are you sure you want to delete this map area?</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="delete_trip_query">Are you sure you want to delete this trip?</string>
    <string name="delete_observation">Delete Observation</string>
    <string name="delete_observation_query">Are you sure you want to delete this observation?</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_query">Are you sure you want to delete this image?</string>
    <string name="add_observation_point">Add Secondary Observation Point</string>
    <string name="delete_observation_point">Delete Secondary Observation Point</string>
    <string name="secondary_trip_map_point_added">Secondary Observation Point Added</string>
    <string name="secondary_trip_map_point_deleted">Secondary Observation Point Deleted</string>

    <string name="settings">Settings</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="gps" translatable="false">GPS</string>
    <string name="gps_dist">Distance Interval</string>
    <string name="gps_time">Time Interval</string>
    <string name="rapport">Rapport</string>
    <string name="simple_rapport_text"><![CDATA[<p>Dead animals: %1$d <br/> Injured animals: %2$d <br/> Trips: %3$d </p>]]></string>
    <string name="other">Other</string>
    <string name="permissions_already_granted">Permissions already granted</string>
    <string name="some_permissions_not_granted">Some permissions not granted</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="name_already_in_use">Name already in use</string>
    <string name="start_new_trip">Start New Trip</string>
    <string name="current_trip">Paused Trip:</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="finish_trip_query">Are you sure you want to finish this trip?</string>
    <string name="finish">Finish</string>
    <string name="longpress_create_verdict">Longpress an area on the map to create a new observation.</string>
    <plurals name="num_trips">
        <item quantity="one">%d trip</item>
        <item quantity="other">%d trips</item>
    </plurals>
    <string name="tiles_to_download_query">The selected area consists of %d tiles.</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_information">Trip Information</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="n_total">%d total</string>
    <string name="distance">Distance</string>
    <string name="dead_injured">Dead / Injured</string>
    <string name="show_map">Show Map</string>
    <string name="end">End</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="no_herds_observed">No herds observed</string>
    <string name="no_dead_animals_observed">No dead animals observed</string>
    <string name="no_injured_animals_observed">No injured animals observed</string>
    <string name="please_select_a_maparea">Please select a MapArea</string>
    <string name="please_enter_trip_name">Please enter a trip name</string>
    <string name="unable_gps">Unable to get GPS location</string>
    <string name="go_to_my_location">Go to my location</string>
    <string name="herds">Herds</string>
    <string name="rapport_text">Dead animals: %1$s \nInjured animals: %2$s \nTrips: %3$d \nDistance: %4$.2f km \nDuration: %5$s </string>
    <string name="export">Export</string>
    <string name="predator">Predator</string>
    <string name="herd">Herd</string>
    <string name="environment">Environment</string>
    <string name="observation">Observation</string>
    <string name="no_map_areas_query">No MapAreas, please download one</string>
    <string name="year_selected">Year</string>
    <string name="db_file">DB-file</string>
    <string name="json_file">JSON-file</string>
    <string name="export_files">Export Files</string>
    <string name="select_files_to_export">Select files to export</string>
    <string name="observation_images">Observation Images</string>
    <string name="text_rapport">Text Rapport</string>
    <string name="dead_and_injured_count">%1$d dead / %2$d injured</string>
    <string name="animals">Animals</string>
    <string name="maparea_details">Map Area Details</string>
    <string name="no_offline_map_areas">No offline map areas</string>
    <string name="turn_on_gps">Error: Turn on GPS</string>
    <string name="export_trip_data">Export Trip Data</string>

</resources>