<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/gps">

        <ListPreference
            app:key="gps_distance_meters"
            app:title="@string/gps_dist"
            app:entries="@array/gps_distance_entries"
            app:entryValues="@array/gps_distance_values"
            app:defaultValue="25"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:key="gps_distance_time"
            app:title="@string/gps_time"
            app:entries="@array/gps_time_entries"
            app:entryValues="@array/gps_time_values"
            app:defaultValue="60"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>


</PreferenceScreen>