<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sheeptracker.ui.observations.ObservationsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.observations.ObservationsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/observationsRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:boolVisibilityGone="@{viewModel.showObservationsRV}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/observation_rv_item" >


        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observationsRV">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_observations"
                android:textAlignment="center"
                app:boolVisibilityGone="@{viewModel.showEmptyListTextView}" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_herds_observed"
                app:boolVisibilityGone="@{viewModel.showNoHerdObservationsText}"/>

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_dead_animals_observed"
                app:boolVisibilityGone="@{viewModel.showNoDeadObservationsText}"/>

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_injured_animals_observed"
                app:boolVisibilityGone="@{viewModel.showNoInjuredObservationsText}"/>

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/longpress_create_verdict"
                android:textAlignment="center"
                app:boolVisibilityGone="@{viewModel.showEmptyListTextView &amp;&amp; !viewModel.trip.tripFinished}" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>